src/app/auth/signup/style/signup.module.css
.main__container {
    width: 100%;
    height: 100vh;
    background-image: url(/assets/images/background2.jpg);
    background-size: 100% 110%;
    background-repeat: no-repeat;
}

.formContainer {
    display: flex;
    width: 60%;
    justify-content: space-between;
    align-items: center;
    gap: 82px;
    border-radius: 60px;
    background: var(--white-45, rgba(255, 255, 255, 0.45));
    margin: 10vh auto;
    padding-right: 44px;
}


.formPiece {
    display: flex;
    padding: 32px 0px;
    flex-direction: column;
    align-items: flex-end;
    gap: 26px;
    align-self: stretch;
}

.card_text {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    gap: 26px;
}

.text_title {
    color: var(--Black, #000);
    text-align: center;
    font-family: "IRANSansX";
    font-size: 24px;
    font-style: normal;
    font-weight: 700;
    line-height: 150%;
}

.text_description {
    color: var(--Black, #000);
    text-align: center;
    font-family: "IRANSansX";
    font-size: 20px;
    font-style: normal;
    font-weight: 400;
    line-height: 150%;
    /* 30px */
}

.inputFieldsContainer {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    align-self: stretch;
    gap: 12px;
}

.inputFieldWrapper {
    display: flex;
    padding: 12px 15px;
    justify-content: flex-end;
    align-items: center;
    align-self: stretch;
    gap: 5px;
    width: 100%;
    border-radius: 33px;
    border: 1px solid var(--Dark-Grey, #403F3F);
    cursor: text;
}

.inputField {
    color: var(--Dark-Grey, #403F3F);
    text-align: right;
    background-color: transparent;
    outline: none;
    border: none;
    font-family: "IRANSansX";
    font-size: 16px;
    font-style: normal;
    font-weight: 300;
    line-height: normal;
}

.icon_fill {
    display: flex;
    width: 21px;
    height: 24px;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.actionButtonWrapper {
    display: flex;
    padding: 0px 8px;
    justify-content: center;
    align-items: center;
    gap: 32px;
    align-self: stretch;
}

.button {
    outline: none;
    border: none;
    color: var(--White, #FFF);
    display: flex;
    padding: 8px 88px;
    align-items: center;
    gap: 33px;
    flex: 1 0 0;
    font-family: "IRANSansX";
    font-size: 20px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
    cursor: pointer;
    border-radius: 30px;
}

.button_login {
    background-color: var(--White);
    color: black;
}

.button_sign_up {
    border-radius: 30px;
    background: var(--Blue-Primary);
}

.infoPiece {
    display: flex;
    width: 40%;
    padding: 64px 0px;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    align-self: stretch;
    border-radius: 60px;
    background: #FFF;
}

.smartvest_description {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 7px;
    align-self: stretch;
}

.description {
    color: var(--Blue-Primary, #008FFF);
    font-size: 24px;
    font-weight: 600;
}

.smartvest {
    color: #000;
    font-size: 24px;
}

.linksWrapper {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 8px;
}

.button_text {
    color: #000;
    font-family: Inter;
    font-size: 24px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
    font-family: IRANSansX;
    cursor: pointer;

}

.button_icon {
    display: flex;
    width: 15px;
    justify-content: center;
    align-items: center;
    align-self: stretch;
    opacity: 0.5;
}

.lockImage {
    width: 90%;
    height: 90%;
    align-items: center;
}

.shape {
    border-radius: 316px;
    opacity: 0.4;
    background: var(--White, #FFF);
    box-shadow: -40px 21px 130px 1px rgba(0, 0, 0, 0.25);
    filter: blur(7px);
}

